// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render component 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "flex": 1,
      "paddingTop": 80,
    }
  }
>
  <Text
    style={
      Object {
        "color": "black",
        "fontSize": 22,
        "fontWeight": "bold",
        "lineHeight": 35,
        "margin": 20,
        "textAlign": "center",
      }
    }
  >
    You have successfully
     
    borrowed
    :
  </Text>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "backgroundColor": "#385A94",
        "borderColor": "#385A94",
        "borderRadius": 18,
        "borderWidth": 1,
        "color": "#0CE1C3",
        "fontSize": 28,
        "fontWeight": "bold",
        "height": 70,
        "lineHeight": 35,
        "marginBottom": 60,
        "paddingTop": 15,
        "textAlign": "center",
        "width": 300,
      }
    }
  >
    1
     
    oz of
     
    butter
  </Text>
  <Text
    style={
      Object {
        "color": "black",
        "fontSize": 22,
        "fontWeight": "bold",
        "lineHeight": 35,
        "margin": 20,
        "textAlign": "center",
      }
    }
  >
    Message the lender to coordinate pick-up details!
  </Text>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#0C94E1",
        "borderColor": "#fff",
        "borderRadius": 10,
        "borderWidth": 1,
        "margin": 40,
        "marginTop": 10,
        "opacity": 1,
        "paddingBottom": 20,
        "paddingTop": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#fff",
          "fontSize": 25,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Send Message
    </Text>
  </View>
</View>
`;

exports[`should render component 2`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "flex": 1,
      "paddingTop": 80,
    }
  }
>
  <Text
    style={
      Object {
        "color": "black",
        "fontSize": 22,
        "fontWeight": "bold",
        "lineHeight": 35,
        "margin": 20,
        "textAlign": "center",
      }
    }
  >
    You have successfully
     
    offered to loan your
    :
  </Text>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "backgroundColor": "#385A94",
        "borderColor": "#385A94",
        "borderRadius": 18,
        "borderWidth": 1,
        "color": "#0CE1C3",
        "fontSize": 28,
        "fontWeight": "bold",
        "height": 70,
        "lineHeight": 35,
        "marginBottom": 60,
        "paddingTop": 15,
        "textAlign": "center",
        "width": 300,
      }
    }
  >
    butter
  </Text>
  <Text
    style={
      Object {
        "color": "black",
        "fontSize": 22,
        "fontWeight": "bold",
        "lineHeight": 35,
        "margin": 20,
        "textAlign": "center",
      }
    }
  >
    Thank you!
  </Text>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#0C94E1",
        "borderColor": "#fff",
        "borderRadius": 10,
        "borderWidth": 1,
        "margin": 40,
        "marginTop": 10,
        "opacity": 1,
        "paddingBottom": 20,
        "paddingTop": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#fff",
          "fontSize": 25,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Loan
       Another Item
    </Text>
  </View>
</View>
`;

exports[`should render component 3`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "flex": 1,
      "paddingTop": 80,
    }
  }
>
  <Text
    style={
      Object {
        "color": "black",
        "fontSize": 22,
        "fontWeight": "bold",
        "lineHeight": 35,
        "margin": 20,
        "textAlign": "center",
      }
    }
  >
    You have successfully
     
    requested
    :
  </Text>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "backgroundColor": "#385A94",
        "borderColor": "#385A94",
        "borderRadius": 18,
        "borderWidth": 1,
        "color": "#0CE1C3",
        "fontSize": 28,
        "fontWeight": "bold",
        "height": 70,
        "lineHeight": 35,
        "marginBottom": 60,
        "paddingTop": 15,
        "textAlign": "center",
        "width": 300,
      }
    }
  >
    butter
  </Text>
  <Text
    style={
      Object {
        "color": "black",
        "fontSize": 22,
        "fontWeight": "bold",
        "lineHeight": 35,
        "margin": 20,
        "textAlign": "center",
      }
    }
  >
    Thank you!
  </Text>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#0C94E1",
        "borderColor": "#fff",
        "borderRadius": 10,
        "borderWidth": 1,
        "margin": 40,
        "marginTop": 10,
        "opacity": 1,
        "paddingBottom": 20,
        "paddingTop": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#fff",
          "fontSize": 25,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Borrow
       Another Item
    </Text>
  </View>
</View>
`;

exports[`should render component 4`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "flex": 1,
      "paddingTop": 80,
    }
  }
>
  <Text
    style={
      Object {
        "color": "black",
        "fontSize": 22,
        "fontWeight": "bold",
        "lineHeight": 35,
        "margin": 20,
        "textAlign": "center",
      }
    }
  >
    You have successfully
     
    returned
    :
  </Text>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "backgroundColor": "#385A94",
        "borderColor": "#385A94",
        "borderRadius": 18,
        "borderWidth": 1,
        "color": "#0CE1C3",
        "fontSize": 28,
        "fontWeight": "bold",
        "height": 70,
        "lineHeight": 35,
        "marginBottom": 60,
        "paddingTop": 15,
        "textAlign": "center",
        "width": 300,
      }
    }
  >
    1
     
    oz of
     
    butter
  </Text>
  <Text
    style={
      Object {
        "color": "black",
        "fontSize": 22,
        "fontWeight": "bold",
        "lineHeight": 35,
        "margin": 20,
        "textAlign": "center",
      }
    }
  >
    Thank you!
  </Text>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#0C94E1",
        "borderColor": "#fff",
        "borderRadius": 10,
        "borderWidth": 1,
        "margin": 40,
        "marginTop": 10,
        "opacity": 1,
        "paddingBottom": 20,
        "paddingTop": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#fff",
          "fontSize": 25,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Borrow
       Another Item
    </Text>
  </View>
</View>
`;

exports[`should render component 5`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "flex": 1,
      "paddingTop": 80,
    }
  }
>
  <Text
    style={
      Object {
        "color": "black",
        "fontSize": 22,
        "fontWeight": "bold",
        "lineHeight": 35,
        "margin": 20,
        "textAlign": "center",
      }
    }
  >
    You have successfully
     
    borrowed
    :
  </Text>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "backgroundColor": "#385A94",
        "borderColor": "#385A94",
        "borderRadius": 18,
        "borderWidth": 1,
        "color": "#0CE1C3",
        "fontSize": 28,
        "fontWeight": "bold",
        "height": 70,
        "lineHeight": 35,
        "marginBottom": 60,
        "paddingTop": 15,
        "textAlign": "center",
        "width": 300,
      }
    }
  >
    1 
    drill
     
    for 1 day
  </Text>
  <Text
    style={
      Object {
        "color": "black",
        "fontSize": 22,
        "fontWeight": "bold",
        "lineHeight": 35,
        "margin": 20,
        "textAlign": "center",
      }
    }
  >
    Message the lender to coordinate pick-up details!
  </Text>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#0C94E1",
        "borderColor": "#fff",
        "borderRadius": 10,
        "borderWidth": 1,
        "margin": 40,
        "marginTop": 10,
        "opacity": 1,
        "paddingBottom": 20,
        "paddingTop": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#fff",
          "fontSize": 25,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Send Message
    </Text>
  </View>
</View>
`;
